# Face-Recognition-System

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: docker-build.yml
backend/: .dockerignore  CMakeLists.txt  Dockerfile  Dockerfile.dev  config.txt
backend/models/depth_anything/: depth_anything_v2_vits_322_static.onnx
backend/src/: main.cpp
backend/src/anti_spoof/: anti_spoof.cpp  anti_spoof.hpp  depth_anything.cpp  depth_anything.hpp
backend/src/base64/: base64.cpp  base64.hpp
backend/src/config/: load_config.cpp  load_config.hpp
backend/src/db/: face_db.cpp  face_db.hpp
backend/src/detector/: face_detector.cpp  face_detector.hpp
backend/src/embedder/: face_embedder.cpp  face_embedder.hpp
backend/src/server/: server.cpp  server.hpp
frontend/: index.html  script.js  style.css
